styling images in work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=#>About me</a></li>
+                    <li><a href=#about-me>About me</a></li>
                     <li><a href=#>Work</a></li>
                     <li><a href=#>Contact Me</a></li>
                     <li><a href=#>Resume</a></li>
@@ -27,7 +27,7 @@
                 </h2>
            </div>
         </section>
-        <section class="about-me">
+        <section id="about-me">
             <div class="text-title">
                 <h2>About Me</h2>
             </div>
@@ -37,6 +37,28 @@
             </br></br>Growing up, my favorite (well, only) sport I played was horseback riding. Yes, I'm a horse girl. I began riding when I was six and have been ever since! My horse's name is Max, and he's getting pretty old now and I am rather busy so I don't ride as much as I used to. 
             </br></br>I got my Associates in Science from Wake Tech a couple months ago. I really didn't want to have to do more traditional schooling and get my Bachelor's, but, the way I saw it, I didn't have much of a choice. I was applying to schools when my brother introduced the idea of coding to me - him being a back-end web developer himself - and the rest is history!
             </p>
+            </div>
+        </section>
+        <section id="work">
+            <div class="text-title">
+                <h2>Work</h2>
+            </div>
+            <div class="images">
+                <div id="large-image">
+                    <img src="./assets/images/robots.jpg">
+                    <div id="large-image-text"> 
+                        <h2>Robot Gladiators</h2>
+                        <p>Javascript</p>
+                </div>
+                </div>
+                <div id="small-images">
+                    <img src="./assets/images/dancing icecream.png"/>
+                    <img src="./assets/images/run buddy.png"/>
+                </div>
+                <div id="small-images">
+                    <img src="./assets/images/Horiseon.png"/>
+                    <img src="./assets/images/the wonder years.png"/>
+                </div>
             </div>
         </section>
     </body>
