added header styling to images in Work

--- a/index.html
+++ b/index.html
@@ -47,17 +47,32 @@
                 <div id="large-image">
                     <img src="./assets/images/robots.jpg">
                     <div id="large-image-text"> 
-                        <h2>Robot Gladiators</h2>
+                        <h3>Robot Gladiators</h3>
                         <p>Javascript</p>
-                </div>
+                    </div>
                 </div>
                 <div id="small-images">
                     <img src="./assets/images/dancing icecream.png"/>
+                        <div class="small-image-text">
+                        <h3>My First Website!</h3>
+                        <p>HTML</p>
+                        </div>
                     <img src="./assets/images/run buddy.png"/>
+                        <div class="small-image-text-right">
+                        <h3>Run Buddy</h3>
+                        <p>HTML, CSS</p>
+                        </div>
                 </div>
                 <div id="small-images">
                     <img src="./assets/images/Horiseon.png"/>
+                        <div class="small-image-text">
+                        <h3>Horiseon</h3>
+                        <p>HTML, CSS</p>
+                        </div>
                     <img src="./assets/images/the wonder years.png"/>
+                        <div class="small-image-text-right">
+                        <h3>My Favorite Band</h3>
+                        <p>HTML, CSS</p>
                 </div>
             </div>
         </section>
