styling on images in work

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             </div>
             <div class="images">
                 <div id="large-image">
+                    <a href="https://maddieburns12.github.io/robot-gladiators/" target="_blank">
                     <img src="./assets/images/robots.jpg">
+                    </a>
                     <div id="large-image-text"> 
                         <h3>Robot Gladiators</h3>
                         <p>Javascript</p>
