--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <nav>
                 <ul>
                     <li><a href=#about-me>About me</a></li>
-                    <li><a href=#>Work</a></li>
-                    <li><a href=#>Contact Me</a></li>
+                    <li><a href=#work>Work</a></li>
+                    <li><a href=#contact-me>Contact Me</a></li>
                     <li><a href=#>Resume</a></li>
                 </ul>
             </nav>
@@ -78,5 +78,25 @@
                 </div>
             </div>
         </section>
+        <footer id="contact-me">
+            <div class="contact-title">
+                <h2>Contact Me</h2>
+            </div>
+            <div class="contact-info">
+                <ul>
+                    <li>919.272.7855</li>
+                    <li>mburns6023@gmail.com</li>
+                    <a href="https://github.com/MaddieBurns12" target="_blank">
+                    <li>GitHub</li>
+                    </a>
+                    <a href="https://twitter.com/?lang=en" target="_blank">
+                    <li>Twitter</li>
+                    </a>
+                    <a href="https://open.spotify.com/user/22x3ehzwhj2t6vw5hrseazsci" target="_blank">
+                    <li>Spotify</li>
+                    </a>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
