clean up css sheet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </h2>
            </div>
         </section>
-        <section id="about-me">
+        <section id="about-me" class="text-section">
             <div class="text-title">
                 <h2>About Me</h2>
             </div>
@@ -39,7 +39,7 @@
             </p>
             </div>
         </section>
-        <section id="work">
+        <section id="work" class="text-section">
             <div class="text-title">
                 <h2>Work</h2>
             </div>
@@ -78,8 +78,8 @@
                 </div>
             </div>
         </section>
-        <footer id="contact-me">
-            <div class="contact-title">
+        <footer id="contact-me" class="text-section">
+            <div class="text-title">
                 <h2>Contact Me</h2>
             </div>
             <div class="contact-info">
