--- a/index.html
+++ b/index.html
@@ -54,24 +54,33 @@
                     </div>
                 </div>
                 <div id="small-images">
+                    <a href="https://maddieburns12.github.io/" target="_blank">
                     <img src="./assets/images/dancing icecream.png"/>
+                    </a>
                         <div class="small-image-text">
                         <h3>My First Website!</h3>
                         <p>HTML</p>
+                    
                         </div>
+                    <a href="https://maddieburns12.github.io/run-buddy/" target="_blank">
                     <img src="./assets/images/run buddy.png"/>
+                    </a>
                         <div class="small-image-text-right">
                         <h3>Run Buddy</h3>
                         <p>HTML, CSS</p>
                         </div>
                 </div>
                 <div id="small-images">
+                    <a href="https://maddieburns12.github.io/An-Accessible-Horiseon/" target="_blank">
                     <img src="./assets/images/Horiseon.png"/>
+                    </a>
                         <div class="small-image-text">
                         <h3>Horiseon</h3>
                         <p>HTML, CSS</p>
                         </div>
+                        <a href="https://maddieburns12.github.io/the-wonder-years/">
                     <img src="./assets/images/the wonder years.png"/>
+                    </a>
                         <div class="small-image-text-right">
                         <h3>My Favorite Band</h3>
                         <p>HTML, CSS</p>
