adding alt altributes, added readme

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="hero">
+        <section class="hero" title="me at the state fair">
             <div class="subtitle">
                 <h2>
                     Me, enjoying the outdoors (for once)!
@@ -45,7 +45,7 @@
             </div>
             <div class="images">
                 <div id="large-image">
-                    <a href="https://maddieburns12.github.io/robot-gladiators/" target="_blank">
+                    <a href="https://maddieburns12.github.io/robot-gladiators/" target="_blank" alt="two robots fighting">
                     <img src="./assets/images/robots.jpg">
                     </a>
                     <div id="large-image-text"> 
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div id="small-images">
-                    <a href="https://maddieburns12.github.io/" target="_blank">
+                    <a href="https://maddieburns12.github.io/" target="_blank" alt="screenshot of my first website">
                     <img src="./assets/images/dancing icecream.png"/>
                     </a>
                         <div class="small-image-text">
@@ -62,7 +62,7 @@
                         <p>HTML</p>
                     
                         </div>
-                    <a href="https://maddieburns12.github.io/run-buddy/" target="_blank">
+                    <a href="https://maddieburns12.github.io/run-buddy/" target="_blank" alt="screenshot of runbuddy website">
                     <img src="./assets/images/run buddy.png"/>
                     </a>
                         <div class="small-image-text-right">
@@ -71,14 +71,14 @@
                         </div>
                 </div>
                 <div id="small-images">
-                    <a href="https://maddieburns12.github.io/An-Accessible-Horiseon/" target="_blank">
+                    <a href="https://maddieburns12.github.io/An-Accessible-Horiseon/" target="_blank" alt="screenshot of horiseon website">
                     <img src="./assets/images/Horiseon.png"/>
                     </a>
                         <div class="small-image-text">
                         <h3>Horiseon</h3>
                         <p>HTML, CSS</p>
                         </div>
-                        <a href="https://maddieburns12.github.io/the-wonder-years/">
+                        <a href="https://maddieburns12.github.io/the-wonder-years/" alt="screenshot of my fanpage website">
                     <img src="./assets/images/the wonder years.png"/>
                     </a>
                         <div class="small-image-text-right">
