adding group project

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                         <h3>Horiseon</h3>
                         <p>HTML, CSS</p>
                         </div>
-                        <a href="https://maddieburns12.github.io/the-wonder-years/" alt="screenshot of my fanpage website">
-                    <img src="./assets/images/the wonder years.png"/>
+                        <a href="https://farrelldianni.github.io/Weave-User-Field-Reference/" alt="screenshot of my group project">
+                    <img src="./assets/images/WUFR.png"/>
                     </a>
                         <div class="small-image-text-right">
-                        <h3>My Favorite Band</h3>
-                        <p>HTML, CSS</p>
+                        <h3>W.U.F.R Project</h3>
+                        <p>HTML, CSS, JS</p>
                 </div>
             </div>
         </section>
