adding dungeon chest

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </div>
             <div class="images">
                 <div id="large-image">
-                    <a href="https://maddieburns12.github.io/robot-gladiators/" target="_blank" alt="two robots fighting">
-                    <img src="./assets/images/robots.jpg">
+                    <a href="https://stark-castle-18267.herokuapp.com/" target="_blank" alt="two robots fighting">
+                    <img src="./assets/images/dungeon-chest-sc.png">
                     </a>
                     <div id="large-image-text"> 
-                        <h3>Robot Gladiators</h3>
-                        <p>Javascript</p>
+                        <h3>Dungeon Chest</h3>
+                        <p>Full-Stack</p>
                     </div>
                 </div>
                 <div id="small-images">
